[package]
name = "chromium_swt"
version = "0.3.0"
authors = ["Make Technology <http://maketechnology.io>", "Guillermo Zunino <guillez@gmail.com>"]
build = "build.rs"

[lib]
name = "chromium_swt"
crate-type = ["rlib", "dylib"]

[profile.release]
lto = true
codegen-units = 1

[features]
gen = []
genJava = []

[target.'cfg(feature = "gen")'.build-dependencies]
bindgen = "0.32.3"

[target.'cfg(feature = "genJava")'.build-dependencies]
java_bindgen = { git = "https://github.com/maketechnology/java-bindgen", branch = "java-bindgen" }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.17.0"

[target.'cfg(unix)'.dependencies]
nix = "0.8.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
