[package]
name = "chromium"
version = "0.9.1"
authors = ["Make Technology <http://maketechnology.io>", "Guillermo Zunino <guillez@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }

[features]
gen = ["bindgen"]
genJava = ["java_bindgen"]

[build-dependencies]
bindgen = { version = "0.32.3", optional = true }
java_bindgen = { git = "https://github.com/maketechnology/java-bindgen", branch = "java-bindgen", optional = true }
