[package]
name = "chromium_swt"
version = "0.5.0"
authors = ["Make Technology <http://maketechnology.io>", "Guillermo Zunino <guillez@gmail.com>"]

[lib]
name = "chromium_swt"
crate-type = ["dylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
chromium = { path = "../chromium_subp/", version = "0.5.0" }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.17.0"

[target.'cfg(unix)'.dependencies]
nix = "0.8.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
