[package]
name = "chromium_swt"
version = "69.0.0"
authors = ["Equo <https://www.equo.dev>"]

[lib]
name = "chromium_swt_6900"
crate-type = ["dylib"]
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
chromium = { path = "../chromium_subp/", version = "69.0.0" }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.17.0"

[target.'cfg(unix)'.dependencies]
nix = "0.20.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
